<resources>
    <string name="app_name">ThirdPerson</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Password">Password</string>
    <string name="textViewRegistro">Si no tiene cuenta, rellene los campos y clik aqui</string>
    <string name="buttonSign">Acceder</string>
    <string name="btRegister">registrar</string>
    <string name="lblemail">Email</string>
    <string name="repeatPassword">Repita la contraseña</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- De esta forma subrayamos ese campo -->
    <string name="lostPassword"><u> Olvidaste la contraseña</u></string>
    <string name="lblIntroduzcasuEmail">Por favor introduzca su email</string>
    <string name="btnSend">Enviar</string>
    <string name="btnGoogle">"Acceder con Google"</string>
    <string name="btnFacebook">"Acceder con Facebook"</string>

    <!-- Variable global para almacenar los datos del usuario-->
    <string name="prefs_file">com.androidavanzado.thirdperson.PREFERENCE_FILE_KEY</string>
    <string name="txtCanyoning">Barranquismo</string>
    <string name="nombreActividad">Nombre de la actividad</string>
    <string name="numerodeparticipantes">Numero de personas</string>
    <string name="idCar">Matricula coche</string>
    <string name="contactoEmergencia">Contacto en caso de retraso</string>
    <string name="starttime">Hora de inicio</string>
    <string name="finishTime">Hora de finalización</string>
    <string name="localizacionVehiculo">Localizacion del vehiculo</string>
    <string name="btnStartActivity">Guardar Actividad</string>
    <string name="Day">Dia</string>
    <string name="ubicacionVehiculo">"Ubicación del vehiculo "</string>
    <string name="title_activity_maps">Map</string>
    <string name="ubicacionvehiculo">Ubicacion del vehiculo en lat long</string>

    <string name="google_maps_key">AIzaSyDkUrLFJvYYTUR82QVTzA_TO4wAK2xwr9g</string>
    <string name="facebook_app_id">2415262288783416</string>
    <string name="fb_login_protocol_scheme">fb2415262288783416</string>


    <!-- String relacionadas con avisos al usuario-->
    <string name="errorAutenticar">Error al crear el usuario</string>


</resources>